--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.04.2022 12:41:28</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.04.2022 13:10:24</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -126,6 +126,41 @@
 </table>
 <table>
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
+<tr>
+<td>
+<table class="dm">
+<tbody>
+<tr>
+<td class="amount">120 g</td>
+<td class="title">Smažené králičí krokety, trhaný salát, ředkvičky, chřest,
+dijonská majonéza, toast 1a,3,7,10</td>
+<td class="pricem">179 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Chřestový krém s vaječnou sedlinou 1a,3,7</td>
+<td class="pricem">79 Kč</td>
+</tr>
+<tr>
+<td class="amount">150 g</td>
+<td class="title">Dušená vepřová líčka, tarhoňa s hráškem, blanšírovaný chřest 1a,3,7</td>
+<td class="pricem">209 Kč</td>
+</tr>
+<tr>
+<td class="amount">200 g</td>
+<td class="title">Vařený chřest s holandskou omáčkou, zastřené vejce,
+brambory Grenaille 1a,3,7,10,12</td>
+<td class="pricem">199 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Čokoládové brownies s marinovanými višněmi a šlehačkou 1a,3,7,8</td>
+<td class="pricem">89 Kč</td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
 <tr>
 <td>
 <table class="dm"><tr><td class="amount"> </td><td class="title">Kulajda s brambory, houbami a vejci 1a,3,7</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Asijské kuřecí nudličky se sezamem s jasmínovou rýží 6,11</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">180g</td><td class="title">Smažené holandské řízečky se sýrem s bramborovou kaší a nakládanou okurkou 1a,3,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Špagety Bolognese masové ragú s kořenovou zeleninou, červeným vínem, drcenými rajčaty se sýrem Forte Classico a rukolovými listy 1a,3,7,9,12</td><td class="pricem">145 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
