--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 28.04.2022 08:49:37</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 28.04.2022 09:09:57</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -128,7 +128,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s kaparami v olivovem oleji, bramborovy salat s pazitkou, cuketou  majonezou 145</li><li>Spagety s uzenou norskou treskou, cerstvymi rajcaty, rapikatym celerem a ancovickami 169</li><li>Ramen s grilovanymi selecimi ribsy, sazenym vejcem, sum coj a ryzovymi nudlemi v hovezim vyvaru se zelenymi bylinkami 145</li><li>Smazeny rizek z kanciho hrbetu, bramborovy salat s pazitkou, cuketami a majonezou, citron {L} 169</li><li>Maghrebska zapecena saksuka s rajcaty, paprikami, vejci a zelenymi bylinkami, jasminova ryze, salatek 145</li></ol>
+<ol><li>Peceny jihocesky siven s omackou salsa verde, stredomorsky jahlovy salat s cerstvou zeleninou, pazitkou a citrony 145</li><li>Peceny filet z cerstveho skotskeho lososa s omackou salsa verde, stredomorsky jahlovy salat s cerstvou zeleninou, pazitkou a citrony 175</li><li>Indicke madras kari s kousky krutich prsou, pecenou dyni, rajcaty a hraskem, jasminova ryze 145</li><li>Opekane kanci a danci nudlicky v chlebove placce s pecenou letni zeleninou, pecene brambory, jogurtovy cesnekovy dip {L} 169</li><li>Recka fava – dip ze zluteho hrachu s reckym ovcim syrem a tureckymi cernymi olivami, arabsky chleb, salatek {L} 145</li></ol>
 </td>
 </tr>
 </table>
